Newid lled y tudalennau

--- a/barddoni.html
+++ b/barddoni.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>PhJ-Barddoni</title>
+<title>PhJ-barddoni</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -20,6 +20,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: rgba(150, 255, 150, 0.8);
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the topnav links */
@@ -63,6 +65,8 @@ body {
 .content {
   background-color: rgba(200, 255, 200, 0.5);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
   /*height: 200px;*/ /* Should be removed. Only for demonstration */
 }
 
@@ -99,6 +103,8 @@ body {
 .footer {
   background-color: rgba(150, 255, 150, 0.8);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
 h1.phil {
