--- a/bywyd.html
+++ b/bywyd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>PhJ</title>
+<title>PhJ-life</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -20,6 +20,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: rgba(255, 255, 255, 1);
+  max-width: 1000px;
+  margin: auto;
 }
 
 .topnav a {
@@ -61,6 +63,8 @@ body {
 .content {
   background-color: rgba(200, 255, 200, 0.3);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
   /*height: 200px;*/ /* Should be removed. Only for demonstration */
 }
 
@@ -68,6 +72,8 @@ body {
 .footer {
   background-color: rgba(255, 255, 255, 1);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the header */
