--- a/cymraeg.html
+++ b/cymraeg.html
@@ -20,6 +20,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: rgba(150, 255, 150, 0.8);
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the top navigation bar */
@@ -65,15 +67,17 @@ body {
 
 /* Style the content */
 .content {
-  background-color: rgba(200, 255, 200, 0.5);
+  background-color: rgba(200, 255, 200, 0.3);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
   /*height: 200px;*/ /* Should be removed. Only for demonstration */
 }
 
 /* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.33%;
+  width: 50%;
   padding: 10px;
     text-align: center;
   /* height: 300px; Should be removed. Only for demonstration */
@@ -103,6 +107,8 @@ body {
 .footer {
   background-color: rgba(255, 255, 255, 1);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the header */
@@ -155,6 +161,12 @@ h1.philllai {
     Moethus mwyn yw <b>maths</b> i mi:<br />
     Rhagluniaeth o raglenni!<br />
     </p>
+	<p>
+	Oes gorchwyn fel <b>disgyrchiant</b> - heb wifrau<br />
+	Na ffiniau i'w ffyniant?<br />
+	Gwlaw o'r nef a ddaw i'r nant<br />
+	Heb blws na minws, mynnant!<br />
+	</p>
   
   </div>
   
@@ -165,20 +177,11 @@ h1.philllai {
 	Meddir, mynnir f'ymenydd<br />
 	Gan echdoriad, <b>syniad</b> sydd!<br />
 	<p>
-	Oes gorchwyn fel <b>disgyrchiant</b> - heb wifrau<br />
-	Na ffiniau i'w ffyniant?<br />
-	Gwlaw o'r nef a ddaw i'r nant<br />
-	Heb blws na minws, mynnant!<br />
-	</p>
-  
-  </div>
-
-  <div class="column">
-  
 	Dyna'r gamp: gweld o'r <b>don</b> a'r <b>gwynt</b> - mai maths,<br />
 	Mam môr, lifa drwyddynt,<br />
 	Troer yr haul a'r lloer! Eu hynt<br />
 	Sy'n dirnad <b>curiad cerrynt</b>.<br />
+	</p>
 	<p>
 	"Un, dau" oedd hadau'r <b>adio</b> - bu'r <b>tynnu</b><br />
 	Bryd hynny'n ffiasgo!<br />
