--- a/erthyglau.html
+++ b/erthyglau.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>PhJ</title>
+<title>PhJ-articles</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -20,6 +20,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: rgba(255, 255, 255, 1);
+  max-width: 1000px;
+  margin: auto;
 }
 
 .topnav a {
@@ -61,6 +63,8 @@ body {
 .content {
   background-color: rgba(200, 255, 200, 0.3);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
   /*height: 200px;*/ /* Should be removed. Only for demonstration */
 }
 
@@ -68,6 +72,8 @@ body {
 .footer {
   background-color: rgba(255, 255, 255, 1);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the header */
@@ -96,117 +102,117 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
-<li><a href="TndEA22CndMdl.pdf">Extremes conditional models (2022)</a></li>		
-<li><a href="SndEA22MSTME.pdf">Multivariate STM-E (2022)</a></li>				
-<li><a href="BrlEAPPL22.pdf">Piecewise-linear covariates (2022)</a></li>		
-<li><a href="RbrEAMth22.pdf">Satellite methane (2022)</a></li>				
-<li><a href="GrnEA3D22.pdf">Wave spectra 3D (2022)</a></li>
-<li><a href="WadEAGdl21.pdf">Guadeloupe (2022)</a></li>
-<li><a href="ShtEAMsce21.pdf">MSCE (2022)</a></li>
-<li><a href="RbyEA21.pdf">Wave impact (2022)</a></li>
-<li><a href="FldEA21.pdf">LOADS (2021)</a></li>
-<li><a href="JntEithafon21.pdf">Voronoi extremes (2021)</a></li>	
-<li><a href="MckEASrlCrr21.pdf">Serial correlation extremes (2021)</a></li>	
-<li><a href="TowEADmn21.pdf">Demanning (2021)</a></li>	
-<li><a href="TndEA21.pdf">Mixture model extremes (2021)</a></li>				
-<li><a href="MckJnt21.pdf">Sampling properties extremes (2021)</a></li>				
-<li><a href="CntCmp21.pdf">Contours benchmarking (2021)</a></li>	
-<li><a href="LmtLns21.pdf">Limit lines (2021)</a></li>				
-<li><a href="BysLnrOde19.pdf">Uncertainty in ODEs (2021)</a></li>	
-<li><a href="KnzEA20_NP.pdf">Semi-parametric extremes (2021)</a></li>
-<li><a href="GrnEASpc20.pdf">Estimating wave spectra (2021)</a></li>
-<li><a href="ShtEASat20.pdf">Satellite extremes (2021)</a></li>
-<li><a href="JntEA20_RV.pdf">On return values (2021)</a></li>
-<li><a href="ZnnEA1D19.pdf">Covariate representations 1D (2020)</a></li>
-<li><a href="WadEA20.pdf">Local STM-E (2020)</a></li>
-<li><a href="MckJnt20a.pdf">Composite joint extremes (2020)</a></li>
-<li><a href="SchEA20.pdf">Wave and crest distributions (2020)</a></li>
-<li><a href="MckJnt20.pdf">Return values from stationary fits (2020)</a></li>
-<li><a href="ShtEACse19.pdf">Conditional spatial extremes Ext (2020)</a></li>
-<li><a href="JEVA19.pdf">AWARE joint extremes (2020)</a></li>		
-<li><a href="Vnm19ShpCnt.pdf">Ship motion extremes (2020)</a></li>
-<li><a href="DsgCntRvw19.pdf">Design contours review (2019)</a></li>
-<li><a href="ShtEA19.pdf">Conditional spatial extremes (2019)</a></li>
-<li><a href="RssEA19OMAE.pdf">Design contours (2019)</a></li>
-<li><a href="FldEA19OMAE.pdf">Directional extremes in practice (2019)</a></li>
-<li><a href="EnsEA19OMAE.pdf">Higher-order spectra (2019)</a></li>
-<li><a href="AnkEA19OMAE.pdf">Extremes South China Sea (2019)</a></li>
-<li><a href="WadEA19OMAE.pdf">STM-E GOM (2019)</a></li>
-<li><a href="TndEA18.pdf">Storm evolution (2018)</a></li>
-<li><a href="FldEACeva18.pdf">CEVA (2018)</a></li>
-<li><a href="WadEA18.pdf">Typhoon extremes STM-E (2018)</a></li>
-<li><a href="JnsEABUA17.pdf">Uncertainty analysis (2018)</a></li>
-<li><a href="RssEASurge17.pdf">North Sea conditional surge (2018)</a></li>
-<li><a href="JnsEASqnDsg17.pdf">Optimal sequential design (2018)</a></li>
-<li><a href="HrsEA17.pdf">Line-of-sight sensing (2017)</a></li>
-<li><a href="http://proceedings.asmedigitalcollection.asme.org/proceeding.aspx?articleid=2655434">Design in squalls (2017)</a></li>
-<li><a href="TowEA16_Downscaling.pdf">Statistical downscaling (2017)</a></li>
-<li><a href="RssEASpatial17.pdf">North Sea spatial extremes (2017)</a></li>
-<li><a href="RssEAMrgBys17.pdf">Bayesian non-stationary extremes (2017)</a></li>
-<li><a href="RndEA15_BNSE.pdf">Bayesian non-stationary extremes (2016)</a></li>
-<li><a href="HiPC16_Final.pdf">4D covariates (2016)</a></li>
-<li><a href="WadEA_OcnEng16_LWM.pdf">Group likelihood (2016)</a></li>
-<li><a href="VglEA_OTC16_SpcCls.pdf">Clustering spectra (2016)</a></li>
-<li><a href="RghEA_OTCA16.pdf">Large scale extremes (2016)</a></li>
-<li><a href="KrsTwnJnt15.pdf">Diagnosing spatial dependence (2016)</a></li>
-<li><a href="RghEA_OMAE16_nDNSCE.pdf">Nonstationary cond-ext (2016)</a></li>
-<li><a href="JnsRndEwnJnt15_SmtExt.pdf">Smoothing for extremes (2016)</a></li>
-<li><a href="WuEA15_SWW.pdf">Shallow-water waves (2016)</a></li>
-<li><a href="NAJ2015_JRSSC.pdf">Threshold selection (2016)</a></li>
-<li><a href="RndEA_MksDrcSsn_15.pdf">Makassar directional-seasonal (2015)</a></li>
-<li><a href="RghEA_CSDA_15.pdf">HPC extremes (2015)</a></li>
-<li><a href="JGJR15_OptDsg.pdf">Optimal design (2015)</a></li>
-<li><a href="OMAE_FldEA_DrcSsnExt.pdf">North Sea directional-seasonal (2015)</a></li>
-<li><a href="2014_JntEwnFln_DsgCnt_JOMAE.pdf">Design contours (2014)</a></li>
-<li><a href="YuDwlJnt14.pdf">Extremes with copulas (2014)</a></li>
-<li><a href="JntRndWuEwn_SpExt_OE13.pdf">Spatio-directional extremes (2014)</a></li>
-<li><a href="EwnJnt14OTC.pdf">OTC extremes (2014)</a></li>
-<li><a href="MuyEwnJnt14OTC.pdf">OTC wind (2014)</a></li>
-<li><a href="OMAE2014_RndEA_DrcExt.pdf">OMAE directional (2014)</a></li>
-<li><a href="Rdr13.pdf">Radar measurement (2014)</a></li>
-<li><a href="NSCE13.pdf">Nonstationary cond-ext (2014)</a></li>
-<li><a href="RndGldJnt12.pdf">Variance structure learning (2014)</a></li>					
-<li><a href="BITW13.pdf">Blowin in the wind (2013)</a></li>
-<li><a href="AtmEnv12.pdf">Remote sensing (2013)</a></li>
-<li><a href="JrnMrnSst12.pdf">Joint extremes (2013)</a></li>
-<li><a href="KEJ11.pdf">Metocean change-points (2013)</a></li>
-<li><a href="WlsEA13.pdf">Ghost imaging (2013)</a></li>	
-<li><a href="RndWuJntEwn13.pdf">Spatio-directional extremes (2013)</a></li>	
-<li><a href="TowEstTwnWuJnt13.pdf">Dependence wind-wave-SLP(2013)</a></li>	
-<li><a href="JntEwnRnd13.pdf">Cond-ext with covariate (2013)</a></li>					
-<li><a href="OcnEngExtRvw12.pdf">Extremes review (2013)</a></li>
-<li><a href="EKJ11.pdf">Spatial dependence (2013)</a></li>
-<li><a href="YuEA12Fusion.pdf">Dependent spatial extremes (2012)</a></li>
-<li><a href="YuEA12ISIT.pdf">Marginal spatial extremes (2012)</a></li>
-<li><a href="RevRndEwnJnt12.pdf">Measurement scale effect (2012)</a></li>
-<li><a href="CrrPrf11.pdf">Ocean current profiles (2012)</a></li>
-<li><a href="2011_Environmetrics_Paper.pdf">Quantile regression thresholds (2011)</a></li>
-<li><a href="2011_ISI_ChangePoints_Talk.pdf">Change points (2011)</a></li>
-<li><a href="SptDrc11.pdf">Spatiodirectional extremes (2011)</a></li>	
-<li><a href="OcnEng10.pdf">Joint wave spectral extremes (2010)</a></li>
-<li><a href="PRSA10.pdf">Pictish symbols (2010)</a></li>
-<li><a href="Rnd10.pdf">Inspection Planning (2010)</a></li>			
-<li><a href="Kll09.pdf">Change points (2009)</a></li>
-<li><a href="SsnExt09.pdf">Seasonal extremes (2009)</a></li>
-<li><a href="WdsTwnJnt09.pdf">Scale transformation (2009)</a></li>
-<li><a href="ZtpEA_Spectra08.pdf">Wave spectral model (2008)</a></li>
-<li><a href="OcnEng08.pdf">Covariate effects in extremes (2008)</a></li>
-<li><a href="JOMAE08.pdf">Directional extremes model (2008)</a></li>
-<li><a href="AtmEnv07.pdf">Inversion in remote sensing (2007)</a></li>
-<li><a href="JntEwnUnc07.pdf">Uncertainties in extreme waves (2007)</a></li>
-<li><a href="SptFctAnl2004.jpg">Temporal factor analysis (2004)</a></li>
-<li><a href="BysIns2004.jpg">Optimal inspection (2004)</a></li>
-<li><a href="CrrMdl2004.jpg">Corrosion modelling (2004)</a></li>
-<li><a href="BrnJntCllBrd03.pdf">Collisional broadening (2003)</a></li>
-<li><a href="CtlPrf2001.jpg">Catalyst performance (2001)</a></li>
-<li><a href="CrsVld2000.jpg">Cross-validation (2000)</a></li>
-<li><a href="JntTlr97.pdf">Irregular, non-linear waves in spread seas (1997)</a></li>
-<li><a href="TlrJntHrl97.pdf">Time-domain simulation of jack-up dynamics (1997)</a></li>
-<li><a href="Credit1996.jpg">Discriminant analysis (1996)</a></li>
-<li><a href="DscAnl1995.jpg">Discriminant analysis (1995)</a></li>
-<li><a href="ChmRvw1993.jpg">QSAR review (1993)</a></li>
-<li><a href="TriDi1988.jpg">Triatomic dications (1988)</a></li>
-<li><a href="KmbEA87.pdf">Single electron capture (1987)</a></li>
+<a href="TndEA22CndMdl.pdf">Extremes conditional models (2022)</a></br>		
+<a href="SndEA22MSTME.pdf">Multivariate STM-E (2022)</a></br>				
+<a href="BrlEAPPL22.pdf">Piecewise-linear covariates (2022)</a></br>		
+<a href="RbrEAMth22.pdf">Satellite methane (2022)</a></br>				
+<a href="GrnEA3D22.pdf">Wave spectra 3D (2022)</a></br>
+<a href="WadEAGdl21.pdf">Guadeloupe (2022)</a></br>
+<a href="ShtEAMsce21.pdf">MSCE (2022)</a></br>
+<a href="RbyEA21.pdf">Wave impact (2022)</a></br>
+<a href="FldEA21.pdf">LOADS (2021)</a></br>
+<a href="JntEithafon21.pdf">Voronoi extremes (2021)</a></br>	
+<a href="MckEASrlCrr21.pdf">Serial correlation extremes (2021)</a></br>	
+<a href="TowEADmn21.pdf">Demanning (2021)</a></br>	
+<a href="TndEA21.pdf">Mixture model extremes (2021)</a></br>				
+<a href="MckJnt21.pdf">Sampling properties extremes (2021)</a></br>				
+<a href="CntCmp21.pdf">Contours benchmarking (2021)</a></br>	
+<a href="LmtLns21.pdf">Limit lines (2021)</a></br>				
+<a href="BysLnrOde19.pdf">Uncertainty in ODEs (2021)</a></br>	
+<a href="KnzEA20_NP.pdf">Semi-parametric extremes (2021)</a></br>
+<a href="GrnEASpc20.pdf">Estimating wave spectra (2021)</a></br>
+<a href="ShtEASat20.pdf">Satellite extremes (2021)</a></br>
+<a href="JntEA20_RV.pdf">On return values (2021)</a></br>
+<a href="ZnnEA1D19.pdf">Covariate representations 1D (2020)</a></br>
+<a href="WadEA20.pdf">Local STM-E (2020)</a></br>
+<a href="MckJnt20a.pdf">Composite joint extremes (2020)</a></br>
+<a href="SchEA20.pdf">Wave and crest distributions (2020)</a></br>
+<a href="MckJnt20.pdf">Return values from stationary fits (2020)</a></br>
+<a href="ShtEACse19.pdf">Conditional spatial extremes Ext (2020)</a></br>
+<a href="JEVA19.pdf">AWARE joint extremes (2020)</a></br>		
+<a href="Vnm19ShpCnt.pdf">Ship motion extremes (2020)</a></br>
+<a href="DsgCntRvw19.pdf">Design contours review (2019)</a></br>
+<a href="ShtEA19.pdf">Conditional spatial extremes (2019)</a></br>
+<a href="RssEA19OMAE.pdf">Design contours (2019)</a></br>
+<a href="FldEA19OMAE.pdf">Directional extremes in practice (2019)</a></br>
+<a href="EnsEA19OMAE.pdf">Higher-order spectra (2019)</a></br>
+<a href="AnkEA19OMAE.pdf">Extremes South China Sea (2019)</a></br>
+<a href="WadEA19OMAE.pdf">STM-E GOM (2019)</a></br>
+<a href="TndEA18.pdf">Storm evolution (2018)</a></br>
+<a href="FldEACeva18.pdf">CEVA (2018)</a></br>
+<a href="WadEA18.pdf">Typhoon extremes STM-E (2018)</a></br>
+<a href="JnsEABUA17.pdf">Uncertainty analysis (2018)</a></br>
+<a href="RssEASurge17.pdf">North Sea conditional surge (2018)</a></br>
+<a href="JnsEASqnDsg17.pdf">Optimal sequential design (2018)</a></br>
+<a href="HrsEA17.pdf">Line-of-sight sensing (2017)</a></br>
+<a href="http://proceedings.asmedigitalcollection.asme.org/proceeding.aspx?articleid=2655434">Design in squalls (2017)</a></br>
+<a href="TowEA16_Downscaling.pdf">Statistical downscaling (2017)</a></br>
+<a href="RssEASpatial17.pdf">North Sea spatial extremes (2017)</a></br>
+<a href="RssEAMrgBys17.pdf">Bayesian non-stationary extremes (2017)</a></br>
+<a href="RndEA15_BNSE.pdf">Bayesian non-stationary extremes (2016)</a></br>
+<a href="HiPC16_Final.pdf">4D covariates (2016)</a></br>
+<a href="WadEA_OcnEng16_LWM.pdf">Group likelihood (2016)</a></br>
+<a href="VglEA_OTC16_SpcCls.pdf">Clustering spectra (2016)</a></br>
+<a href="RghEA_OTCA16.pdf">Large scale extremes (2016)</a></br>
+<a href="KrsTwnJnt15.pdf">Diagnosing spatial dependence (2016)</a></br>
+<a href="RghEA_OMAE16_nDNSCE.pdf">Nonstationary cond-ext (2016)</a></br>
+<a href="JnsRndEwnJnt15_SmtExt.pdf">Smoothing for extremes (2016)</a></br>
+<a href="WuEA15_SWW.pdf">Shallow-water waves (2016)</a></br>
+<a href="NAJ2015_JRSSC.pdf">Threshold selection (2016)</a></br>
+<a href="RndEA_MksDrcSsn_15.pdf">Makassar directional-seasonal (2015)</a></br>
+<a href="RghEA_CSDA_15.pdf">HPC extremes (2015)</a></br>
+<a href="JGJR15_OptDsg.pdf">Optimal design (2015)</a></br>
+<a href="OMAE_FldEA_DrcSsnExt.pdf">North Sea directional-seasonal (2015)</a></br>
+<a href="2014_JntEwnFln_DsgCnt_JOMAE.pdf">Design contours (2014)</a></br>
+<a href="YuDwlJnt14.pdf">Extremes with copulas (2014)</a></br>
+<a href="JntRndWuEwn_SpExt_OE13.pdf">Spatio-directional extremes (2014)</a></br>
+<a href="EwnJnt14OTC.pdf">OTC extremes (2014)</a></br>
+<a href="MuyEwnJnt14OTC.pdf">OTC wind (2014)</a></br>
+<a href="OMAE2014_RndEA_DrcExt.pdf">OMAE directional (2014)</a></br>
+<a href="Rdr13.pdf">Radar measurement (2014)</a></br>
+<a href="NSCE13.pdf">Nonstationary cond-ext (2014)</a></br>
+<a href="RndGldJnt12.pdf">Variance structure learning (2014)</a></br>					
+<a href="BITW13.pdf">Blowin in the wind (2013)</a></br>
+<a href="AtmEnv12.pdf">Remote sensing (2013)</a></br>
+<a href="JrnMrnSst12.pdf">Joint extremes (2013)</a></br>
+<a href="KEJ11.pdf">Metocean change-points (2013)</a></br>
+<a href="WlsEA13.pdf">Ghost imaging (2013)</a></br>	
+<a href="RndWuJntEwn13.pdf">Spatio-directional extremes (2013)</a></br>	
+<a href="TowEstTwnWuJnt13.pdf">Dependence wind-wave-SLP(2013)</a></br>	
+<a href="JntEwnRnd13.pdf">Cond-ext with covariate (2013)</a></br>					
+<a href="OcnEngExtRvw12.pdf">Extremes review (2013)</a></br>
+<a href="EKJ11.pdf">Spatial dependence (2013)</a></br>
+<a href="YuEA12Fusion.pdf">Dependent spatial extremes (2012)</a></br>
+<a href="YuEA12ISIT.pdf">Marginal spatial extremes (2012)</a></br>
+<a href="RevRndEwnJnt12.pdf">Measurement scale effect (2012)</a></br>
+<a href="CrrPrf11.pdf">Ocean current profiles (2012)</a></br>
+<a href="2011_Environmetrics_Paper.pdf">Quantile regression thresholds (2011)</a></br>
+<a href="2011_ISI_ChangePoints_Talk.pdf">Change points (2011)</a></br>
+<a href="SptDrc11.pdf">Spatiodirectional extremes (2011)</a></br>	
+<a href="OcnEng10.pdf">Joint wave spectral extremes (2010)</a></br>
+<a href="PRSA10.pdf">Pictish symbols (2010)</a></br>
+<a href="Rnd10.pdf">Inspection Planning (2010)</a></br>			
+<a href="Kll09.pdf">Change points (2009)</a></br>
+<a href="SsnExt09.pdf">Seasonal extremes (2009)</a></br>
+<a href="WdsTwnJnt09.pdf">Scale transformation (2009)</a></br>
+<a href="ZtpEA_Spectra08.pdf">Wave spectral model (2008)</a></br>
+<a href="OcnEng08.pdf">Covariate effects in extremes (2008)</a></br>
+<a href="JOMAE08.pdf">Directional extremes model (2008)</a></br>
+<a href="AtmEnv07.pdf">Inversion in remote sensing (2007)</a></br>
+<a href="JntEwnUnc07.pdf">Uncertainties in extreme waves (2007)</a></br>
+<a href="SptFctAnl2004.jpg">Temporal factor analysis (2004)</a></br>
+<a href="BysIns2004.jpg">Optimal inspection (2004)</a></br>
+<a href="CrrMdl2004.jpg">Corrosion modelling (2004)</a></br>
+<a href="BrnJntCllBrd03.pdf">Collisional broadening (2003)</a></br>
+<a href="CtlPrf2001.jpg">Catalyst performance (2001)</a></br>
+<a href="CrsVld2000.jpg">Cross-validation (2000)</a></br>
+<a href="JntTlr97.pdf">Irregular, non-linear waves in spread seas (1997)</a></br>
+<a href="TlrJntHrl97.pdf">Time-domain simulation of jack-up dynamics (1997)</a></br>
+<a href="Credit1996.jpg">Discriminant analysis (1996)</a></br>
+<a href="DscAnl1995.jpg">Discriminant analysis (1995)</a></br>
+<a href="ChmRvw1993.jpg">QSAR review (1993)</a></br>
+<a href="TriDi1988.jpg">Triatomic dications (1988)</a></br>
+<a href="KmbEA87.pdf">Single electron capture (1987)</a></br>
 
 </div>
 
