--- a/caerhirfryn.html
+++ b/caerhirfryn.html
@@ -20,6 +20,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: rgba(255, 255, 255, 1);
+  max-width: 1000px;
+  margin: auto;
 }
 
 .topnav a {
@@ -61,6 +63,8 @@ body {
 .content {
   background-color: rgba(200, 255, 200, 0.3);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
   /*height: 200px;*/ /* Should be removed. Only for demonstration */
 }
 
@@ -68,6 +72,8 @@ body {
 .footer {
   background-color: rgba(255, 255, 255, 1);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the header */
