--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
 * {
   box-sizing: border-box;
   font-family: sylfaen, garamond, serif;
@@ -20,6 +21,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: rgba(255, 255, 255, 1);
+  max-width: 1000px;
+  margin: auto;
 }
 
 .topnav a {
@@ -29,6 +32,7 @@ body {
   text-align: center;
   padding: 15px;
   text-decoration: none;
+
 }
 
 .topnav phil {
@@ -61,6 +65,8 @@ body {
 .content {
   background-color: rgba(200, 255, 200, 0.3);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
   /*height: 200px;*/ /* Should be removed. Only for demonstration */
 }
 
@@ -68,6 +74,8 @@ body {
 .footer {
   background-color: rgba(255, 255, 255, 1);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the header */
