--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>PhJ</title>
+<title>PhJ-talks</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
 * {
   box-sizing: border-box;
   font-family: sylfaen, garamond, serif;
@@ -20,6 +21,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: rgba(255, 255, 255, 1);
+  max-width: 1000px;
+  margin: auto;
 }
 
 .topnav a {
@@ -61,6 +64,8 @@ body {
 .content {
   background-color: rgba(200, 255, 200, 0.3);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
   /*height: 200px;*/ /* Should be removed. Only for demonstration */
 }
 
@@ -68,6 +73,8 @@ body {
 .footer {
   background-color: rgba(255, 255, 255, 1);
   padding: 10px;
+  max-width: 1000px;
+  margin: auto;
 }
 
 /* Style the header */
@@ -95,60 +102,60 @@ h1.phil {
 
 <p>The talks below are provided mostly as pdf files, with the occasional link to arXiv and YouTube. At the bottom of the page, there are links to a few other blog posts, posters and articles.</p>
 
-<li><a href="JntGrgRmtSns22.pdf"> Gregynog Synhwyro (2022)</a></li>
-<li><a href="JntGrgExt22.pdf"> Gregynog Extremes (2022)</a></li>
-<li><a href="DCE21.pdf"> Data-centric engineering (2021)</a></li>
-<li><a href="CWC21.pdf"> C.W.Caerdydd (2021)</a></li>
-<li><a href="Msce21.pdf"> MSCE RSS (2021)</a></li>
-<li><a href="JntUnc21.pdf"> Return value uncertainty (2021)</a></li>
-<li><a href="Noc2020.pdf"> Waves(NOC) (2020)</a></li>
-<li><a href="Omae2020_Mck.pdf">OMAE (2020)</a></li>
-<li><a href="https://www.youtube.com/watch?v=u-ikeirpbh4&t=16s">Cynhadledd Rhithiol (2020)</a></li>
-<li><a href="EcsOslo19.pdf">ECSADES Oslo (2019)</a></li>				
-<li><a href="EvnRV19.pdf">EVAN return values (2019)</a></li>
-<li><a href="LncCR19.pdf">Lancaster extremes (2019)</a></li>
-<li><a href="Dsne19.pdf">Lancaster DNSE (2019)</a></li>
-<li><a href="Dsi2019.pdf">Lancaster DSI (2019)</a></li>
-<li><a href="JntIC19.pdf">Imperial & Penryn 2019)</a></li>	
-<li><a href="JntPisa18.pdf">CMS Pisa (2018)</a></li>
-<li><a href="SttSmn18.pdf">Lancaster & Exeter (2018)</a></li>
-<li><a href="LancsEnvDatSci18.pdf">Lancaster & Reading (2018)</a></li>
-<li><a href="Bng18.pdf">Bangor (2018)</a></li>
-<li><a href="RSSEAS17.pdf">Emerging applications (2017)</a></li>
-<li><a href="WadEAWW17.pdf">Waves Liverpool (2017)</a></li>
-<li><a href="EVAN17.pdf">EVAN Southampton (2017)</a></li>
-<li><a href="EVA17.pdf">EVA Delft (2017)</a></li>
-<li><a href="StatScale17.pdf">StatScale Lancaster (2017)</a></li>	
-<li><a href="STORiExtremes16.pdf">Lancaster Workshop (2016)</a></li>
-<li><a href="OMAE16_NSCE.pdf">OMAE S. Korea (2016)</a></li>
-<li><a href="OTC-27039-Vogel-Etal.pdf">OTC Houston (2016)</a></li>
-<li><a href="RghEA_OTC16_LSE.pdf">OTC East (2016)</a></li>
-<li><a href="EVAN15.pdf">EVAN Santander (2015)</a></li>
-<li><a href="EVA15.pdf">EVA Ann Arbor (2015)</a></li>
-<li><a href="SeminarEdinburgh_15.pdf">Edinburgh (2015)</a></li>
-<li><a href="JntEA_RSS14.pdf">Sheffield RSS (2014, revised OMAE)</a></li>
-<li><a href="SustainBristol14.pdf">Bristol (2014, revised OMAE)</a></li>
-<li><a href="OMAESlidesDrc14.pdf">SF OMAE-directional (2014)</a></li>
-<li><a href="LncRdnGrp13.pdf">Lancs reading group (2013)</a></li>
-<li><a href="JntHnc13.pdf">Hejnice (2013)</a></li>
-<li><a href="JntRSS13.pdf">Ncl RSS (2013, revised OMAE)</a></li>
-<li><a href="TowEAOmae13.pdf">OMAE-dependence (2013)</a></li>
-<li><a href="JntRndOslo13.pdf">Oslo (2013)</a></li>
-<li><a href="WuJntRnd13.pdf">EVT13 (2013)</a></li>
-<li><a href="Robust12.pdf">N&#283m&#269i&#269ky Robust (2012)</a></li>
-<li><a href="JsmSld12.pdf">San Diego JSM (2012)</a></li>			<li><a href="JsmExtAbs12.pdf">JSM San Diego abstract (2012)</a></li>
-<li><a href="Jonathan_2011_Oxford.pdf">Oxford SUTGEF (2011)</a></li>
-<li><a href="Eva2011.pdf">EVA Lyon (2011)</a></li>
-<li><a href="IrishMed2011.pdf">Irish Medievalists (2011)</a></li>
-<li><a href="Omae2011.pdf">OMAE (2011)</a></li>
-<li><a href="2011_RSSEnv_Talk.pdf">RSS Environmental (2011)</a></li>
-<li><a href="2011_ScaleEffects.pdf">Scale effects (2011)</a></li>
-<li><a href="LncRSS10.pdf">Lancaster local RSS (2010)</a></li>
-<li><a href="HndFrc09.pdf">Waves workshop (2009)</a></li>
-<li><a href="RSS09.pdf">RSS conference (2009)</a></li>
-<li><a href="Sheff09.pdf">Sheffield (2009)</a></li>
-<li><a href="UKX08.pdf">UK Extremes meeting (2008)</a></li>
-<li><a href="RSS08.pdf">RSS conference (2008)</a></li>
+<a href="JntGrgRmtSns22.pdf"> Gregynog Synhwyro (2022)</a></br>
+<a href="JntGrgExt22.pdf"> Gregynog Extremes (2022)</a></br>
+<a href="DCE21.pdf"> Data-centric engineering (2021)</a></br>
+<a href="CWC21.pdf"> C.W.Caerdydd (2021)</a></br>
+<a href="Msce21.pdf"> MSCE RSS (2021)</a></br>
+<a href="JntUnc21.pdf"> Return value uncertainty (2021)</a></br>
+<a href="Noc2020.pdf"> Waves(NOC) (2020)</a></br>
+<a href="Omae2020_Mck.pdf">OMAE (2020)</a></br>
+<a href="https://www.youtube.com/watch?v=u-ikeirpbh4&t=16s">Cynhadledd Rhithiol (2020)</a></br>
+<a href="EcsOslo19.pdf">ECSADES Oslo (2019)</a></br>				
+<a href="EvnRV19.pdf">EVAN return values (2019)</a></br>
+<a href="LncCR19.pdf">Lancaster extremes (2019)</a></br>
+<a href="Dsne19.pdf">Lancaster DNSE (2019)</a></br>
+<a href="Dsi2019.pdf">Lancaster DSI (2019)</a></br>
+<a href="JntIC19.pdf">Imperial & Penryn 2019)</a></br>	
+<a href="JntPisa18.pdf">CMS Pisa (2018)</a></br>
+<a href="SttSmn18.pdf">Lancaster & Exeter (2018)</a></br>
+<a href="LancsEnvDatSci18.pdf">Lancaster & Reading (2018)</a></br>
+<a href="Bng18.pdf">Bangor (2018)</a></br>
+<a href="RSSEAS17.pdf">Emerging applications (2017)</a></br>
+<a href="WadEAWW17.pdf">Waves Liverpool (2017)</a></br>
+<a href="EVAN17.pdf">EVAN Southampton (2017)</a></br>
+<a href="EVA17.pdf">EVA Delft (2017)</a></br>
+<a href="StatScale17.pdf">StatScale Lancaster (2017)</a></br>	
+<a href="STORiExtremes16.pdf">Lancaster Workshop (2016)</a></br>
+<a href="OMAE16_NSCE.pdf">OMAE S. Korea (2016)</a></br>
+<a href="OTC-27039-Vogel-Etal.pdf">OTC Houston (2016)</a></br>
+<a href="RghEA_OTC16_LSE.pdf">OTC East (2016)</a></br>
+<a href="EVAN15.pdf">EVAN Santander (2015)</a></br>
+<a href="EVA15.pdf">EVA Ann Arbor (2015)</a></br>
+<a href="SeminarEdinburgh_15.pdf">Edinburgh (2015)</a></br>
+<a href="JntEA_RSS14.pdf">Sheffield RSS (2014, revised OMAE)</a></br>
+<a href="SustainBristol14.pdf">Bristol (2014, revised OMAE)</a></br>
+<a href="OMAESlidesDrc14.pdf">SF OMAE-directional (2014)</a></br>
+<a href="LncRdnGrp13.pdf">Lancs reading group (2013)</a></br>
+<a href="JntHnc13.pdf">Hejnice (2013)</a></br>
+<a href="JntRSS13.pdf">Ncl RSS (2013, revised OMAE)</a></br>
+<a href="TowEAOmae13.pdf">OMAE-dependence (2013)</a></br>
+<a href="JntRndOslo13.pdf">Oslo (2013)</a></br>
+<a href="WuJntRnd13.pdf">EVT13 (2013)</a></br>
+<a href="Robust12.pdf">N&#283m&#269i&#269ky Robust (2012)</a></br>
+<a href="JsmSld12.pdf">San Diego JSM (2012)</a></br>			<a href="JsmExtAbs12.pdf">JSM San Diego abstract (2012)</a></br>
+<a href="Jonathan_2011_Oxford.pdf">Oxford SUTGEF (2011)</a></br>
+<a href="Eva2011.pdf">EVA Lyon (2011)</a></br>
+<a href="IrishMed2011.pdf">Irish Medievalists (2011)</a></br>
+<a href="Omae2011.pdf">OMAE (2011)</a></br>
+<a href="2011_RSSEnv_Talk.pdf">RSS Environmental (2011)</a></br>
+<a href="2011_ScaleEffects.pdf">Scale effects (2011)</a></br>
+<a href="LncRSS10.pdf">Lancaster local RSS (2010)</a></br>
+<a href="HndFrc09.pdf">Waves workshop (2009)</a></br>
+<a href="RSS09.pdf">RSS conference (2009)</a></br>
+<a href="Sheff09.pdf">Sheffield (2009)</a></br>
+<a href="UKX08.pdf">UK Extremes meeting (2008)</a></br>
+<a href="RSS08.pdf">RSS conference (2008)</a></br>
 
 
 <h1 class="phil">github</h1>
@@ -156,16 +163,16 @@ h1.phil {
 
 <h1 class="phil">a few other items</h1>
 
-<li><a href="https://medium.com/data-centric-engineering-blog/remote-sensing-for-methane-monitoring-and-reducing-greenhouse-gas-emissions-f37661685281">Medium blog on remote sensing (2022)</a></li>
-<li><a href="Grn22Poster.pdf">Poster on estimating directional wave spectra (2022)</a></li>
-<li><a href="Tnd22Poster.pdf">Poster on estimating multivariate time-series extremes (2022)</a></li>
-<li><a href="ShtEAParis18.pdf">Spatial conditional extremes (Poster, Paris, 2018)</a></li>
-<li><a href="RssEA_StrEvl18.pdf">Storm evolution (Poster, Paris, 2018)</a></li>
-<li><a href="ErCof_JHB_2016.pdf">J. H. Beynon (In memoriam, 2016)</a></li>
-<li><a href="2011_ScaleEffects_LyonPoster.pdf">Scale effects (Poster, Lyon, 2011)</a></li>
-<li><a href="2011_AsconaRoss.pdf">Statistical downscaling (Poster, Ascona, 2011)</a></li>
-<li><a href="EnvDsc11.pdf">Quantile regression (Discussion, Environmetrics, 2011)</a></li>
-<li><a href="OEDscMck11.pdf">Covariates in extremes (Discussion, Ocean Engineering, 2010)</a></li>
+<a href="https://medium.com/data-centric-engineering-blog/remote-sensing-for-methane-monitoring-and-reducing-greenhouse-gas-emissions-f37661685281">Medium blog on remote sensing (2022)</a></br>
+<a href="Grn22Poster.pdf">Poster on estimating directional wave spectra (2022)</a></br>
+<a href="Tnd22Poster.pdf">Poster on estimating multivariate time-series extremes (2022)</a></br>
+<a href="ShtEAParis18.pdf">Spatial conditional extremes (Poster, Paris, 2018)</a></br>
+<a href="RssEA_StrEvl18.pdf">Storm evolution (Poster, Paris, 2018)</a></br>
+<a href="ErCof_JHB_2016.pdf">J. H. Beynon (In memoriam, 2016)</a></br>
+<a href="2011_ScaleEffects_LyonPoster.pdf">Scale effects (Poster, Lyon, 2011)</a></br>
+<a href="2011_AsconaRoss.pdf">Statistical downscaling (Poster, Ascona, 2011)</a></br>
+<a href="EnvDsc11.pdf">Quantile regression (Discussion, Environmetrics, 2011)</a></br>
+<a href="OEDscMck11.pdf">Covariates in extremes (Discussion, Ocean Engineering, 2010)</a></br>
 
 </div>
 
