Cywiro llythrennau bras

--- a/bywyd.html
+++ b/bywyd.html
@@ -98,13 +98,13 @@ h1.phil {
 
 <div class="content"> 
 
-<h1 class="title">C&ocircr Rhuthun</h1>
+<h1 class="title">c&ocircr rhuthun</h1>
 <p>I sing in a great choir called C&ocircr Rhuthun a'r Cylch. See more here at <a href="http://www.corrhuthun.co.uk/">www.corrhuthun.co.uk</a> .</p>
 
-<h1 class="title">Meibion Marchan</h1>
+<h1 class="title">meibion marchan</h1>
 Our men's singing group competed at the National Eisteddfod in 2011, 2013, 2015, 2018 and 2019. For some wonderment, see us in our element in <a href="http://www.bbc.co.uk/cymru/eisteddfod/2011/safle/canlyniadau/canlyniad2.shtml?rhif=25&type=day">2011</a> and better still in <a href="https://www.youtube.com/watch?v=d_3qRu872pk">2018</a>.</p>
 
-<h1 class="title">Phil A'r Monics</h1>
+<h1 class="title">phil a'r monics</h1>
 <p>I once also sang in a quartet called Phil A'r Monics. Be amazed here: <a href="http://uk.youtube.com/watch?v=qL-z4H7cah4">Noson Lawen</a>, and if you can stand it here too: <a href="http://uk.youtube.com/watch?v=gvvpVLD3Gfk">Llanfair Dyffryn Clwyd</a> .</p>
 
 </div>
