--- a/caerhirfryn.html
+++ b/caerhirfryn.html
@@ -101,42 +101,42 @@ h1.phil {
 
 <h1 class="phil">current projects</h1>
 
-<h1 class="title">Extreme value analysis in ocean engineering</h1>
+<h1 class="title">extreme value analysis in ocean engineering</h1>
 <p>With Yanyun Wu supervised jointly by Jonathan Tawn. We're currently working on developing a spatial model for extremal dependence summary statistics like "eta" for complete ocean basins. We've also developed a model for extreme waves in shallow water. We're also interested in the effects of measurement scale on extreme quantile estimates.</p> 
 
-<h1 class="title">The spectral description of ocean surface gravity waves</h1>
+<h1 class="title">spectral description of ocean surface gravity waves</h1>
 <p>With Jake Grainger supervised jointly by Adam Sykulski and Rob Lamb. We're exploring statistical approaches to estimate frequency and frequency-direction spectra for ocean waves, to partition sequences of complex spectra into wind-wave and surge components, and to estimate higher-order wave bi- and tri-spectra.</p> 
 
-<h1 class="title">The non-stationary evolution of time-series of extremes</h1>
+<h1 class="title">non-stationary evolution of time-series of extremes</h1>
 <p>With Stan Tendijck supervised jointly by Emma Eastoe and Jonathan Tawn. Stan has developed interesting mixture-model extensions to the conditional extremes model. We're also looking at developing non-stationary multivariate Markov extremal models.</p> 
 
-<h1 class="title">Optimal design of experiments in ocean engineering</h1>
+<h1 class="title">optimal design of experiments in ocean engineering</h1>
 <p>With Daniel Dodd supervised jointly by David Leslie and Ed Cripps. We'll modelling the evolution of so-called underwater 'pipeline spans', devising new statistical models for span growth, and optimal design strategies for inspection and maintenance. This project is in collaboration with the University of Western Australia, Perth.</p> 
 		
 <h1 class="phil">completed projects</h1>
 
-<h1 class="title">Modelling extremal spatial dependence flexibly</h1>
+<h1 class="title">modelling extremal spatial dependence flexibly</h1>
 <p>With Rob Shooter, supervised jointly by Jenny Wadsworth and Jonathan Tawn. Development of a flexible modelling framework for spatial extremes incorporating different forms of extremal dependence. </p> 
 
-<h1 class="title">Non-stationary environmental extremes</h1>
+<h1 class="title">non-stationary environmental extremes</h1>
 <p>With Elena Zanini, supervised jointly by Emma Eastoe and Jonathan Tawn, with a lot of assistance from David Randell. We developed improved approaches to modelling high-dimensional non-stationarity in extremes. </p> 
 
-<h1 class="title">Infering spatial and temporal variation in extremes</h1>
+<h1 class="title">spatial and temporal variation in extremes</h1>
 <p>With Monika Kereszturi, supervised jointly by Paul Fearnhead and Jonathan Tawn. Development of realistic estimates for extremal dependence of storm peak events of ocean waves, in the North Sea and other ocean basins.</p> 
 
-<h1 class="title">Statistical down-scaling</h1>
+<h1 class="title">statistical down-scaling</h1>
 <p>Ross Towe (with Emma Eastoe, Nicolas Fourier and Jonathan Tawn, 2011-2015): Accommodating climate change effects from regional climate simualations within wave hindcasts for ocean design.</p> 
 		
-<h1 class="title">Locally-stationary energy time-series</h1>
+<h1 class="title">locally-stationary energy time-series</h1>
 <p>Led by Idris Eckley and Becki Killick, with Ben Pickering: Use of wavelet-based changepoint methods to detect subtle features in high resolution signals, for application e.g. in acoustic sensing or in compression and interpretation of high-dimensional time-series. </p> 
 
-<h1 class="title">Extreme value analysis</h1>
+<h1 class="title">extreme value analysis</h1>
 <p>Jenny Wadsworth (with Jonathan Tawn 2009-2012): Developments in extreme value analysis. We wrote a paper for the Annals of Applied Statistics on scale transformation in extreme value analysis, in which optimal scale transformations for extremes of the ocean surface are explored. Jenny published subsequent articles on threshold selection, multivariate and spatial extremes.</p> 
 
-<h1 class="title">Wavelet methods in change point analysis</h1>
+<h1 class="title">wavelet methods in change point analysis</h1>
 <p>Becki Killick (with Idris Eckley, 2008-2012): Wavelet methods for change point analysis. We wrote an article for Ocean Engineering on detection of changes in variance (i.e. significant wave height) of the ocean surface in the Gulf of Mexico during the 20th century, an article for the 2011 ISI conference, and a paper for the Annals of Applied Statistics. </p>
 
-<h1 class="title">Laplace approximations</h1>
+<h1 class="title">laplace approximations</h1>
 <p>Dan Reeve (with Jonathan Tawn and Paul Fearnhead, 2011-2012): Laplace approximations offer an alternative to MCMC simulation for Bayesian estimation.</p> 
 
 </div>
