ychwanegu Matt a Thomas

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ h1.phil {
 
 <p>I'm a statistical modeller at Shell and the Department of Mathematics and Statistics at Lancaster.</p>
 
-<p>At Lancaster, I'm working with Jonathan Tawn and Yanyun Wu on developments in extreme value analysis, with Emma Eastoe, Jonathan Tawn, and Stan Tendijck on multivariate time-series extremes, with Rob Lamb, Adam Sykulski and Jake Grainger on spectral descriptions of ocean wave phenomena, and with David Leslie, Ed Cripps and Daniel Dodd on optimal design for subsea pipeline spans.</p>
+<p>At Lancaster, I'm working with Yanyun Wu and Jonathan Tawn (developments in extreme value analysis), with Stan Tendijck, Emma Eastoe and Jonathan Tawn (multivariate mixture-model and time-series extremes), with Jake Grainger, Rob Lamb and Adam Sykulski (spectral descriptions of ocean wave phenomena), and with Dan Dodd and David Leslie (optimal design for subsea pipeline spans). New projects with Matt Speers and Jonathan Tawn (multivariate extremes), and Thomas Newman and Chris Nemeth (Bayesian inverse modelling) get under way in 2022. </p>
 
 <p>I work in extreme value analysis for oceanographic and ocean engineering applications, Bayesian methods for monitoring of large systems in time and inversion methods in remote sensing. I'm interested in uncertainty quantification and multivariate methods generally, particularly in application to our physical environment.</p>
 
