--- a/caerhirfryn.html
+++ b/caerhirfryn.html
@@ -101,17 +101,23 @@ h1.phil {
 
 <h1 class="phil">current projects</h1>
 
-<h1 class="title">extreme value analysis in ocean engineering</h1>
-<p>With Yanyun Wu supervised jointly by Jonathan Tawn. We're currently working on developing a spatial model for extremal dependence summary statistics like "eta" for complete ocean basins. We've also developed a model for extreme waves in shallow water. We're also interested in the effects of measurement scale on extreme quantile estimates.</p> 
+<h1 class="title">multivariate extremes</h1>
+<p>With Matt Speers co-supervised by Jonathan Tawn, David Randell (Shell) and Lifen Chen (UWA, Perth). This new 2022 project will look at tackling important engineering challenges in extreme value analysis, like realistic joint modelling of the temporal evolution of many variables characterising an ocean storm, and estimation of risk contours (and sample boundaries) for multiple variables.</p> 
 
-<h1 class="title">spectral description of ocean surface gravity waves</h1>
-<p>With Jake Grainger supervised jointly by Adam Sykulski and Rob Lamb. We're exploring statistical approaches to estimate frequency and frequency-direction spectra for ocean waves, to partition sequences of complex spectra into wind-wave and surge components, and to estimate higher-order wave bi- and tri-spectra.</p> 
-
-<h1 class="title">non-stationary evolution of time-series of extremes</h1>
-<p>With Stan Tendijck supervised jointly by Emma Eastoe and Jonathan Tawn. Stan has developed interesting mixture-model extensions to the conditional extremes model. We're also looking at developing non-stationary multivariate Markov extremal models.</p> 
+<h1 class="title">bayesian inverse modelling</h1>
+<p>With Thomas Newman co-supervised by Chris Nemeth and Matthew Jones (Shell). This new 2022 project will consider methods for improved characterisation of sources of gaseous emissions form remote measurements, and the assimilation of data from multiple sensing technologies to characterise environmental emissions on different spatio-temporal scales.</p> 
 
 <h1 class="title">optimal design of experiments in ocean engineering</h1>
-<p>With Daniel Dodd supervised jointly by David Leslie and Ed Cripps. We'll modelling the evolution of so-called underwater 'pipeline spans', devising new statistical models for span growth, and optimal design strategies for inspection and maintenance. This project is in collaboration with the University of Western Australia, Perth.</p> 
+<p>With Daniel Dodd co-supervised by David Leslie and Ed Cripps (UWA, Perth). We'll modelling the evolution of so-called underwater 'pipeline spans', devising new statistical models for span growth, and optimal design strategies for inspection and maintenance. This project is in collaboration with the University of Western Australia, Perth.</p> 
+
+<h1 class="title">spectral description of ocean surface gravity waves</h1>
+<p>With Jake Grainger co-supervised by Adam Sykulski and Rob Lamb (JBA / Lancaster). We're exploring statistical approaches to estimate frequency and frequency-direction spectra for ocean waves, to partition sequences of complex spectra into wind-wave and surge components, and to estimate higher-order wave bi- and tri-spectra.</p> 
+
+<h1 class="title">non-stationary evolution of time-series of extremes</h1>
+<p>With Stan Tendijck co-supervised by Emma Eastoe and Jonathan Tawn. Stan has developed interesting mixture-model extensions to the conditional extremes model. We're also looking at developing non-stationary multivariate Markov extremal models.</p> 
+
+<h1 class="title">extreme value analysis in ocean engineering</h1>
+<p>With Yanyun Wu co-supervised by Jonathan Tawn. We're currently working on developing a spatial model for extremal dependence summary statistics like "eta" for complete ocean basins. We've also developed a model for extreme waves in shallow water. We're also interested in the effects of measurement scale on extreme quantile estimates.</p> 
 		
 <h1 class="phil">completed projects</h1>
 
