--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>PhJ</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Environmental statistics in action">
 <style>
 
 * {
