--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>PhJ</title>
+<title>Philip Jonathan</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Environmental statistics in action">
+<meta property="og:image" content="https://ygraigarw.github.io/favicon.ico"/>
 <style>
 
 * {
