Adding OG meta data

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <title>Philip Jonathan</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Environmental statistics in action">
+<meta name="description" content="Environmental statistics">
+<meta property="og:title" content="Philip Jonathan"/>
 <meta property="og:image" content="https://ygraigarw.github.io/favicon.ico"/>
+<meta property="og:url" content="https://ygraigarw.github.io/"/>
+<meta property="og:description" content="Environmental statistics"/>
 <style>
 
 * {
