--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Environmental statistics">
 <meta property="og:title" content="Philip Jonathan"/>
 <meta property="og:image" content="https://ygraigarw.github.io/favicon.ico"/>
-<meta property="og:url" content="https://ygraigarw.github.io/"/>
+<meta property="og:url" content="https://www.lancaster.ac.uk/~jonathan"/>
 <meta property="og:description" content="Environmental statistics"/>
 <style>
 
