Ymgais gyntaf ar dudalen barddoni

--- a/cymraeg.html
+++ b/cymraeg.html
@@ -30,6 +30,7 @@ body {
   background-color: rgba(255, 255, 255, 1);
 }
 
+/* Style the topnav links */
 .topnav a {
   float: left;
   display: block;
@@ -134,7 +135,7 @@ h1.philllai {
   <a href="caerhirfryn.html">caerhirfryn</a>
   <a href="arall.html">arall</a>
   <philsc>cymraeg</philsc>
-  <!-- <a href="barddoni.html">barddoni</a> -->
+  <a href="barddoni.html">barddoni</a>
 </div>
 
 <div class="content"> 
