Gorffen sgyrsiau dwi di dod o hyd iddynt mor belled; hen farddoni ar ol

--- a/barddoni.html
+++ b/barddoni.html
@@ -178,10 +178,46 @@ Craig côf, 'sdim dianc rhag hon.</br>
 
 <p>Yma cewch amrhyw sgyrsiau ac erthyglau cyffredinol ysgrifennwyd gennyf (agorir rhain fel ffeiliau pdf).</p>
 
+<a href="2022_Credo.pdf">2022: Credo personol</a></br>
+<a href="2022_DengMlynedd.pdf">2022: Ymhen deng mlynedd</a></br>
 <a href="2022_PwerGeiriau.pdf">2022: Grym geiriau</a></br>
+<a href="2021_DewisCredu.pdf">2021: Dewis credu</a></br>
+<a href="2021_Mae’rNefoeddYnDatgan.pdf">2021: Mae’r nefoedd yn datgan</a></br>
+<a href="2020_BywYnWell.pdf">2020: Byw yn well</a></br>
+<a href="2020_CariadDiamod.pdf">2020: Cariad di-amod</a></br>
+<a href="2020_GydagArwel.pdf">2020: Gydag Arwel</a></br>
+<a href="2020_GydarHwyr.pdf">2020_Gyda'r hwyr</a></br>
+<a href="2020_Tomotos.pdf">2020: Tomatos</a></br>
+<a href="2019_Chernobyl.pdf">2019: Chernobyl</a></br>
+<a href="2018_NegesHenRoeg.pdf">2018: Neges Hen Roeg</a></br>
+<a href="2017_DedwyddwchAChydraddoldeb.pdf">2017: Dedwyddwch a chydraddoldeb</a></br>
+<a href="2017_SulYBlodau.pdf">2017: Sul Y Blodau</a></br>
+<a href="2016_HanesJob.pdf">2016: Hanes Job</a></br>
+<a href="2015_BodolaethDuw.pdf">2015: Bodolaeth Duw</a></br>
+<a href="2015_Paul.pdf">2015: Paul</a></br>
+<a href="2014_HenRoegAChristnogaeth.pdf">2014: Hen Roeg a Christnogaeth</a></br>
+<a href="2014_MyfyrdodYNadolig.pdf">2014: Myfyrdod Y Nadolig</a></br>
+<a href="2014_Rhufeiniaid12.pdf">2014: Rhufeiniaid12</a></br>
 <a href="2014_YnYPinc.pdf">2014: I Graham</a></br>
+<a href="2013_DedwyddwchAChydraddoldeb.pdf">2013: Dedwyddwch a chydraddoldeb</a></br>
+<a href="2013_Ffydd.pdf">2013: Ffydd</a></br>
+<a href="2013_YDoethion.pdf">2013: Y Doethion</a></br>
+<a href="2012_PenblwyddIwan.pdf">2012: Penblwydd Iwan</a></br>
+<a href="2010_BethYwBodYnGristion.pdf">2010: Beth yw bod yn Gristion</a></br>
+<a href="2010_Jana.pdf">2010: Jana</a></br>
+<a href="2010_Porthcawl.pdf">2010: Porthcawl</a></br>
+<a href="2009_MariLwyd.pdf">2009: Y Fari Lwyd</a></br>
+<a href="2008_GolaurGannwyll.pdf">2008: Golau'r gannwyll</a></br>
+<a href="2008_Nadolig.pdf">2008: Y Nadolig</a></br>
+<a href="2007_AnnwylTwm.pdf">2007: Annwyl Twm</a></br>
+<a href="2005_NegesEwyllysDaTsiec.pdf">2005: Neges Ewyllys Da Tsieceg</a></br>
+<a href="2004_FyNhrysorI.pdf">2004: Fy nhrysor i</a></br>
+<a href="2004_PobPethYmhellAcAgos.pdf">2004: Pob peth ymhell ac agos</a></br>
+<a href="2003_Adref.pdf">2003: Adref</a></br>
+<a href="2003_Hapusrwydd.pdf">2003: Hapusrwydd</a></br>
+<a href="2002_AnnwylKatrin.pdf">2002: Annwyl Katrin</a></br>
 <a href="2000_HelMeddyliau.pdf">2000: Hel meddyliau</a></br>
-
+<a href="1997_Democratiaeth.pdf">1997: Democratiaeth</a></br>
 </div>
 
 <!--
