--- a/barddoni.html
+++ b/barddoni.html
@@ -160,6 +160,7 @@ Craig côf, 'sdim dianc rhag hon.</br>
 <p>Dewiswch unrhyw flwyddyn o ddiddordeb (agorir rhain fel ffeiliau pdf).</p>
 
 <div class="pagination">
+  <a href="GweCng14.pdf">2014</a>
   <a href="GweCng15.pdf">2015</a>
   <a href="GweCng16.pdf">2016</a>
   <a href="GweCng17.pdf">2017</a>
