--- a/barddoni.html
+++ b/barddoni.html
@@ -179,6 +179,7 @@ Craig côf, 'sdim dianc rhag hon.</br>
 
 <p>Yma cewch amrhyw sgyrsiau ac erthyglau cyffredinol ysgrifennwyd gennyf (agorir rhain fel ffeiliau pdf).</p>
 
+<a href="2022_CydnabodDiolchgarwch.pdf">2022: Cydnabod diolchgarwch</a></br>
 <a href="2022_Credo.pdf">2022: Credo personol</a></br>
 <a href="2022_DengMlynedd.pdf">2022: Ymhen deng mlynedd</a></br>
 <a href="2022_PwerGeiriau.pdf">2022: Grym geiriau</a></br>
