--- a/sgyrsiau.html
+++ b/sgyrsiau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The talks below are provided mostly as pdf files, with the occasional link to arXiv and YouTube. At the bottom of the page, there are links to a few other blog posts, posters and articles.</p>
 
+<a href="JntMetOff22.pdf"> MetOffice / Plymouth (2022)</a></br>
 <a href="JntGrgRmtSns22.pdf"> Gregynog Synhwyro (2022)</a></br>
 <a href="JntGrgExt22.pdf"> Gregynog Extremes (2022)</a></br>
 <a href="DCE21.pdf"> Data-centric engineering (2021)</a></br>
