--- a/barddoni.html
+++ b/barddoni.html
@@ -169,6 +169,7 @@ Craig côf, 'sdim dianc rhag hon.</br>
   <a href="GweCng20.pdf">2020</a>
   <a href="GweCng21.pdf">2021</a>
   <a href="GweCng22.pdf">2022</a>
+  <a href="GweCng23.pdf">2023</a>
 </div>
 
 </div>
