--- a/erthyglau.html
+++ b/erthyglau.html
@@ -103,6 +103,7 @@ h1.phil {
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
 <a href="EwnJnt23ClmChn.pdf">Uncertainties in estimating climate effects (2023)</a></br>	
+<a href="EwnJnt23ClmChnTsm.pdf">Climate effects Tasman Sea (2023)</a></br>
 <a href="TowEA22_AssValCndExt.pdf">Estimating associated values (2022)</a></br>	
 <a href="TndEA22CndMdl.pdf">Extremes conditional models (2022)</a></br>		
 <a href="SndEA22MSTME.pdf">Multivariate STM-E (2022)</a></br>				
