Climate extremes + updated CV

--- a/arall.html
+++ b/arall.html
@@ -106,6 +106,7 @@ h1.phil {
 <p>Can you retrieve a picture of an object through correlated measurements of a projected light using a single pixel camera and <a href="WlsEA13.pdf">ghost imaging</a>?</p>
 
 <h1 class="title">introductions to environmental extremes</h1>
+<p>With Jenny Wadsworth, I organised a <a href="https://sites.google.com/view/extremeoceanwavephenomena">workshop</a> at Lancaster on extreme ocean wave phenomena in 2019. Jenny organised a prior meeting on interfaces in extreme value theory.
 <p>Kevin Ewans and I contributed a <a href="https://www.worldscientific.com/worldscibooks/10.1142/11509">chapter</a> on extreme ocean conditions for the collection entitled "Ocean wave dynamics" edited by Ian Young and Alex Babanin of the University of Melbourne, which appeared in 2020.</p>
 <p>A dyma <a href="https://youtu.be/u-ikeirpbh4">sgwrs</a> YouTube ar eithafon amgylcheddol (a talk about environmental extremes in Welsh). </p>
 
