Erthygl EVAR-MMEM

--- a/erthyglau.html
+++ b/erthyglau.html
@@ -102,6 +102,7 @@ h1.phil {
 
 <p>The article pre-prints below are provided mostly as pdf files, with the occasional link to arXiv.</p>
 
+<a href="TndEA23ExtTimSrs.pdf">EVAR-MMEM (2023)</a></br>	
 <a href="EwnJnt23ClmChn.pdf">Uncertainties in estimating climate effects (2023)</a></br>	
 <a href="EwnJnt23ClmChnTsm.pdf">Climate effects Tasman Sea (2023)</a></br>
 <a href="TowEA22_AssValCndExt.pdf">Estimating associated values (2023)</a></br>	
