Newyddu tudalen flaen, Lancs, CV

--- a/caerhirfryn.html
+++ b/caerhirfryn.html
@@ -110,16 +110,16 @@ h1.phil {
 <h1 class="title">optimal design of experiments in ocean engineering</h1>
 <p>With Daniel Dodd co-supervised by David Leslie and Ed Cripps (UWA, Perth). We'll modelling the evolution of so-called underwater 'pipeline spans', devising new statistical models for span growth, and optimal design strategies for inspection and maintenance. This project is in collaboration with the University of Western Australia, Perth.</p> 
 
-<h1 class="title">spectral description of ocean surface gravity waves</h1>
-<p>With Jake Grainger co-supervised by Adam Sykulski and Rob Lamb (JBA / Lancaster). We're exploring statistical approaches to estimate frequency and frequency-direction spectra for ocean waves, to partition sequences of complex spectra into wind-wave and surge components, and to estimate higher-order wave bi- and tri-spectra.</p> 
-
-<h1 class="title">non-stationary evolution of time-series of extremes</h1>
-<p>With Stan Tendijck co-supervised by Emma Eastoe and Jonathan Tawn. Stan has developed interesting mixture-model extensions to the conditional extremes model. We're also looking at developing non-stationary multivariate Markov extremal models.</p> 
-
 <h1 class="title">extreme value analysis in ocean engineering</h1>
 <p>With Yanyun Wu co-supervised by Jonathan Tawn. We're currently working on developing a spatial model for extremal dependence summary statistics like "eta" for complete ocean basins. We've also developed a model for extreme waves in shallow water. We're also interested in the effects of measurement scale on extreme quantile estimates.</p> 
 		
 <h1 class="phil">completed projects</h1>
+
+<h1 class="title">spectral description of ocean surface gravity waves</h1>
+<p>With Jake Grainger co-supervised by Adam Sykulski and Rob Lamb (JBA / Lancaster). We explored statistical approaches to estimate frequency and frequency-direction spectra for ocean waves, to partition sequences of complex spectra into wind-wave and swell components, and to estimate higher-order wave bi- and tri-spectra.</p> 
+
+<h1 class="title">non-stationary evolution of time-series of extremes</h1>
+<p>With Stan Tendijck co-supervised by Emma Eastoe and Jonathan Tawn. Stan developed interesting mixture-model extensions to the conditional extremes model, and non-stationary multivariate Markov extremal models for ocean storm evolution.</p> 
 
 <h1 class="title">modelling extremal spatial dependence flexibly</h1>
 <p>With Rob Shooter, supervised jointly by Jenny Wadsworth and Jonathan Tawn. Development of a flexible modelling framework for spatial extremes incorporating different forms of extremal dependence. </p> 
