Wedi ffeindio lot o hen erthyglau

--- a/erthyglau.html
+++ b/erthyglau.html
@@ -205,19 +205,25 @@ h1.phil {
 <a href="JOMAE08.pdf">Directional extremes model (2008)</a></br>
 <a href="AtmEnv07.pdf">Inversion in remote sensing (2007)</a></br>
 <a href="JntEwnUnc07.pdf">Uncertainties in extreme waves (2007)</a></br>
-<a href="SptFctAnl2004.jpg">Temporal factor analysis (2004)</a></br>
-<a href="BysIns2004.jpg">Optimal inspection (2004)</a></br>
-<a href="CrrMdl2004.jpg">Corrosion modelling (2004)</a></br>
+<a href="SptFctAnl2004.pdf">Temporal factor analysis (2004)</a></br>
+<a href="BysIns2004.pdf">Optimal inspection (2004)</a></br>
+<a href="CrrMdl2004.pdf">Corrosion modelling (2004)</a></br>
 <a href="BrnJntCllBrd03.pdf">Collisional broadening (2003)</a></br>
 <a href="CtlPrf2001.jpg">Catalyst performance (2001)</a></br>
-<a href="CrsVld2000.jpg">Cross-validation (2000)</a></br>
+<a href="CrsVld2000.pdf">Cross-validation (2000)</a></br>
 <a href="JntTlr97.pdf">Irregular, non-linear waves in spread seas (1997)</a></br>
 <a href="TlrJntHrl97.pdf">Time-domain simulation of jack-up dynamics (1997)</a></br>
-<a href="Credit1996.jpg">Discriminant analysis (1996)</a></br>
-<a href="DscAnl1995.jpg">Discriminant analysis (1995)</a></br>
+<a href="Credit1996.pdf">Discriminant analysis (1996)</a></br>
+<a href="DscAnl1995.pdf">Discriminant analysis (1995)</a></br>
 <a href="ChmRvw1993.jpg">QSAR review (1993)</a></br>
-<a href="TriDi1988.jpg">Triatomic dications (1988)</a></br>
+<a href="HmdEA88IJMS.pdf">Single electron capture by Cl<sup>2+</sup> (1988)</a></br>
+<a href="HrmEA88ChmPhs.pdf">Non-dissociative electron capture by NO<sup>2+</sup> (1988)</a></br>
+<a href="TriDi1988.pdf">Triatomic dications (1988)</a></br>
 <a href="KmbEA87.pdf">Single electron capture (1987)</a></br>
+<a href="LeeEA87PhysLttA.pdf">Capture-dissociation H<sub>2</sub><sup>+</sup> (1987)</a></br>
+<a href="LeeEA87.pdf">Capture-dissociation H<sub>2</sub><sup>+</sup> to H<sup>-</sup> (1987)</a></br>
+<a href="HrmEA87ChmPhsLtt.pdf">Non-dissociative electron capture by CO<sup>2+</sup> (1987)</a></br>
+<a href="JntEA86ChmPhs.pdf">Diatomic dications containing inert gas atom (1986)</a></br>
 
 </div>
 
