--- a/erthyglau.html
+++ b/erthyglau.html
@@ -135,6 +135,7 @@ h1.phil {
 <a href="MckJnt20.pdf">Return values from stationary fits (2020)</a></br>
 <a href="ShtEACse19.pdf">Conditional spatial extremes Ext (2020)</a></br>
 <a href="JEVA19.pdf">AWARE joint extremes (2020)</a></br>		
+<a href="Jnt20Unp-MdlAss.pdf">Model assessment (unpublished) (2020)</a></br>
 <a href="Vnm19ShpCnt.pdf">Ship motion extremes (2020)</a></br>
 <a href="DsgCntRvw19.pdf">Design contours review (2019)</a></br>
 <a href="ShtEA19.pdf">Conditional spatial extremes (2019)</a></br>
@@ -209,13 +210,14 @@ h1.phil {
 <a href="BysIns2004.pdf">Optimal inspection (2004)</a></br>
 <a href="CrrMdl2004.pdf">Corrosion modelling (2004)</a></br>
 <a href="BrnJntCllBrd03.pdf">Collisional broadening (2003)</a></br>
-<a href="CtlPrf2001.jpg">Catalyst performance (2001)</a></br>
+<a href="KskEA21JChemo.pdf">Catalyst performance (2001)</a></br>
 <a href="CrsVld2000.pdf">Cross-validation (2000)</a></br>
 <a href="JntTlr97.pdf">Irregular, non-linear waves in spread seas (1997)</a></br>
 <a href="TlrJntHrl97.pdf">Time-domain simulation of jack-up dynamics (1997)</a></br>
 <a href="Credit1996.pdf">Discriminant analysis (1996)</a></br>
 <a href="DscAnl1995.pdf">Discriminant analysis (1995)</a></br>
-<a href="ChmRvw1993.jpg">QSAR review (1993)</a></br>
+<a href="StnJnt94JChemo.pdf">QSAR review Part 2(1994)</a></br>
+<a href="StnJnt93JChemo.pdf">QSAR review Part 1(1993)</a></br>
 <a href="HmdEA88IJMS.pdf">Single electron capture by Cl<sup>2+</sup> (1988)</a></br>
 <a href="HrmEA88ChmPhs.pdf">Non-dissociative electron capture by NO<sup>2+</sup> (1988)</a></br>
 <a href="TriDi1988.pdf">Triatomic dications (1988)</a></br>
