Newyddiad cyn RSS

--- a/barddoni.html
+++ b/barddoni.html
@@ -169,7 +169,8 @@ Craig côf, 'sdim dianc rhag hon.</br>
   <a href="GweCng20.pdf">2020</a>
   <a href="GweCng21.pdf">2021</a>
   <a href="GweCng22.pdf">2022</a>
-  <a href="GweCng23.pdf">2023</a>
+  <a href="GweCng23-1.pdf">2023-1</a>
+  <a href="GweCng23-2.pdf">2023-2</a>
 </div>
 
 </div>
